--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Gabriel Weinbrenner",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "mongoose": "^4.11.3",
     "nodemon": "^1.11.0"
   }
 }
